--- a/src/components/my-component/side-drawer/side-drawer.css
+++ b/src/components/my-component/side-drawer/side-drawer.css
@@ -3,7 +3,7 @@ div {
     background-color: beige;
     position: fixed;
     top: 0;
-    left: 0;
+    left: -100%;
     height: 100vh;
     width: 30rem; 
     max-width: 80vw;
@@ -19,4 +19,8 @@ header h1 {
     padding: 8px 16px;
     font-size: 2.5rem;
     color: beige;
+}
+:host([open]) div {
+    transition: 0.3s ease-out;
+    left: 0;  
 }
