--- a/src/components/my-component/side-drawer/side-drawer.css
+++ b/src/components/my-component/side-drawer/side-drawer.css
@@ -1,6 +1,11 @@
+:host {
+    --my-black: rgba(0,0,0,0.85);
+}
+
 aside {
+    color: var(--my-black);
+    background-color: white;
     font-family: sans-serif;
-    background-color: beige;
     position: fixed;
     top: 0;
     left: -100%;
@@ -11,12 +16,12 @@ aside {
     z-index: 100;
 }
 #backdrop {
+    background-color: rgba (0,0,0,0.5);
     position: fixed; 
     top: 0;
     left: 0;
     width: 100%;
     height: 100vh;
-    background-color: beige;
     z-index: 10;
     opacity: 0;
     pointer-events: none;
@@ -38,13 +43,13 @@ header {
     align-items: center;
     justify-content: space-between; */
     width: 100%;
-    background-color: black;
+    background-color: var(--my-black);
     position: relative;
 }
 header h1 {
     padding: 8px 16px;
     font-size: 2.5rem;
-    color: beige;
+    color: white;
 }
 header button {
     position: absolute;
@@ -76,8 +81,8 @@ header button:focus {
 #tabs button.active,
 #tabs button:hover,
 #tabs button:active {
-    background-color: black;
-    color: beige;
+    background-color: var(--my-black);
+    color: white;
 }
 #tabs button:focus {
     outline: none;
